<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.automation</groupId>
    <artifactId>OneAppAutomation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Appium Automation Framework</name>
    <description>BDD Cucumber framework for Android and iOS automation</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <appium.version>8.6.0</appium.version>
        <selenium.version>4.15.0</selenium.version>
        <cucumber.version>7.18.1</cucumber.version>
        <testng.version>7.10.2</testng.version>
        <extentreports.version>5.1.2</extentreports.version>
        <log4j.version>2.23.1</log4j.version>
        <allure.version>2.29.0</allure.version>
        <platform>android</platform>
        <execution.type>local</execution.type>
    </properties>

    <dependencies>
        <!-- Appium Java Client -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appium.version}</version>
        </dependency>

        <!-- Selenium WebDriver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!-- Cucumber Dependencies -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- TestNG -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>

        <!-- Extent Reports -->
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extentreports.version}</version>
        </dependency>

        <!-- Extent Cucumber Adapter -->
        <dependency>
            <groupId>tech.grasshopper</groupId>
            <artifactId>extentreports-cucumber7-adapter</artifactId>
            <version>1.14.0</version>
        </dependency>

        <!-- Log4j2 for Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- Commons IO -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.17.0</version>
        </dependency>

        <!-- Allure Cucumber JVM -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <!-- Allure TestNG -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <!-- JSON Simple for BrowserStack -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>

        <!-- Masterthought Cucumber HTML Reporting -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>5.8.2</version>
        </dependency>

        <!-- Jakarta Mail (SMTP email reporting) -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Maven Surefire Plugin for TestNG -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <platform>${platform}</platform>
                        <execution.type>${execution.type}</execution.type>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Android Profile -->
        <profile>
            <id>android</id>
            <properties>
                <platform>android</platform>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <!-- iOS Profile -->
        <profile>
            <id>ios</id>
            <properties>
                <platform>ios</platform>
            </properties>
        </profile>

        <!-- Local Execution Profile -->
        <profile>
            <id>local</id>
            <properties>
                <execution.type>local</execution.type>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <!-- BrowserStack Execution Profile -->
        <profile>
            <id>browserstack</id>
            <properties>
                <execution.type>browserstack</execution.type>
            </properties>
        </profile>

        <!-- Combined Profiles for Easy Execution -->
        
        <!-- Local Android Emulator -->
        <profile>
            <id>local-android-emulator</id>
            <properties>
                <platform>android</platform>
                <execution.type>local</execution.type>
                <android.deviceType>emulator</android.deviceType>
            </properties>
        </profile>
        
        <!-- Local Android Real Device -->
        <profile>
            <id>local-android-real</id>
            <properties>
                <platform>android</platform>
                <execution.type>local</execution.type>
                <android.deviceType>real</android.deviceType>
            </properties>
        </profile>

        <!-- Local Android (default - auto-detect) -->
        <profile>
            <id>local-android</id>
            <properties>
                <platform>android</platform>
                <execution.type>local</execution.type>
            </properties>
        </profile>

        <!-- Local iOS Simulator -->
        <profile>
            <id>local-ios-simulator</id>
            <properties>
                <platform>ios</platform>
                <execution.type>local</execution.type>
                <ios.deviceType>simulator</ios.deviceType>
            </properties>
        </profile>
        
        <!-- Local iOS Real Device -->
        <profile>
            <id>local-ios-real</id>
            <properties>
                <platform>ios</platform>
                <execution.type>local</execution.type>
                <ios.deviceType>real</ios.deviceType>
            </properties>
        </profile>

        <!-- Local iOS (default - uses config) -->
        <profile>
            <id>local-ios</id>
            <properties>
                <platform>ios</platform>
                <execution.type>local</execution.type>
            </properties>
        </profile>

        <!-- BrowserStack Android -->
        <profile>
            <id>bs-android</id>
            <properties>
                <platform>android</platform>
                <execution.type>browserstack</execution.type>
            </properties>
        </profile>

        <!-- BrowserStack iOS -->
        <profile>
            <id>bs-ios</id>
            <properties>
                <platform>ios</platform>
                <execution.type>browserstack</execution.type>
            </properties>
        </profile>
    </profiles>

</project>
